[package]
name = "filesys"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.45"
argon2 = "0.3.1"
bincode = "1.3.3"
rand = "0.8"
rocket = { version = "0.5.0-rc.1", features = ["secrets", "json"] }
rustyline = "9.0.0"
serde = { version = "1.0.130", features = ["derive"] }
