[package]
name = "filesys"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.45"
argon2 = "0.3.1"
bincode = "1.3.3"
rand = "0.8"
reqwest = { version = "0.11.6", features = ["cookies", "json"] }
rocket = { git = "https://github.com/SergioBenitez/Rocket.git", features = [
    "secrets",
    "json",
] }
rpassword = "5.0"
rustyline = "9.0.0"
serde = { version = "1.0.130", features = ["derive"] }
serde_json = "1.0.70"
shellwords = "1.1.0"
structopt = "0.3.25"
tokio = { version = "1", features = ["full"] }
